Fixing the footer text alignment.

--- a/index.css
+++ b/index.css
@@ -232,16 +232,19 @@ footer {
   position: relative;
   color: #C1BCC2;
   background-color: #282629;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
   padding: 5rem 0;
 }
 
 footer a {
   color: #FFFCFF;
+}
+
+.footer--text--container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .legal {
